# AstroWISP

./: .gitattributes  .gitignore  Codemeta.json  MANIFEST.in  README.md  README.rst  build.gradle  create_source_list.py  meson.build  numpy2_ci_plan.md  pyproject.toml
.github/workflows/: build_wheels.yml  test_wheels.yml
PythonPackage/: .pylintrc
PythonPackage/astrowisp/: __init__.py  __main__.py  _initialize_library.py  background.py  fit_star_shape.py  hat_masks.py  io_tree.py  meson.build  subpixphot.py
PythonPackage/fake_image/: BipolynomialPSFPiece.py  Image.py  PSFBase.py  PSFPiece.py  PiecewiseBicubicPSF.py  PiecewisePSF.py
PythonPackage/superphot/: .gitignore  __init__.py  _initialize_core_library.py  _initialize_io_library.py  _initialize_library.py  background.py  fit_star_shape.py  hat_masks.py  io_library_interface.py  meson.build  piecewise_bicubic_psf.py  piecewise_bicubic_psf_map.py  psf.py  psf_base.py  psf_map.py  smooth_dependence.py  subpixphot.py  superphot_io_tree.py
PythonPackage/superphot/fake_image/: bipolynomial_psf_piece.py  meson.build  piecewise_bicubic_psf.py  piecewise_psf.py  psf_base.py  psf_piece.py
PythonPackage/superphot/fake_image/unit_tests/: TestPiecewiseBicubicPSF.py  Utilities.py
PythonPackage/superphot/utils/: __init__.py  explore_prf.py  file_utilities.py  meson.build
PythonPackage/tests/: __init__.py  background.py  meson.build  test_background.py  test_fake_image.py  test_fit_star_shape.py  test_piecewise_bicubic_psf.py  utilities.py
PythonPackage/utils/: explore_prf.py
docs/: .buildinfo  AmplitudeSaturatedPixel_8h.html  AmplitudeSaturatedPixel_8h_source.html  Annulus_8cpp.html  Annulus_8h.html  Annulus_8h_source.html  Background_2CInterface_8cpp.html  Background_2CInterface_8cpp.js  Background_2CInterface_8h.html  Background_2CInterface_8h.js  Background_2CInterface_8h_source.html  Background_2CommandLineUtil_8cpp.html  Background_2CommandLineUtil_8cpp.js  Background_2CommandLineUtil_8h.html  Background_2CommandLineUtil_8h.js  Background_2CommandLineUtil_8h_source.html  Background_2Source_8h.html  Background_2Source_8h.js  Background_2Source_8h_source.html  BinaryOutputFormat.html  BinaryOutputFormat_8md.html  BinarySourceOutput_8cpp.html  BinarySourceOutput_8h.html  BinarySourceOutput_8h_source.html  Binary_8cpp.html  Binary_8cpp.js  Binary_8h.html  Binary_8h.js  Binary_8h_source.html  CInterface_8cpp.html  CInterface_8h.html  CInterface_8h_source.html  ChiSquared_8cpp.html  ChiSquared_8h.html  ChiSquared_8h_source.html  CirclePieceIntegral_8cpp.html  CirclePieceIntegral_8h.html  CirclePieceIntegral_8h_source.html  CommandLineConfig_8cpp.html  CommandLineConfig_8h.html  (+834 more)
docs/_images/: inheritance-0100696de1bdc408130dd95cf11b2484e61e6a35.png.map  inheritance-0452a9845bdb3070d556333ace8ca6016bfcb2b0.png.map  inheritance-0494443471ee2f3700ba241bc1fdc03cae26ae0f.png.map  inheritance-04c5b3f773d343d9867061d7cfad16e18ca1bd9e.png.map  inheritance-083b631c28e8866a9d90bfa6912ce43c209112a7.png.map  inheritance-0872b76f20d69adbd67d2b839d362646e4c82461.png.map  inheritance-08c51703e0e6f5027f3269f5575c275c71e32f65.png.map  inheritance-0a2a68cb9891f704a4ead540a73be97211c2f291.png.map  inheritance-0a61cb7ecef281760762e2a97c7a1b1873e4433c.png.map  inheritance-0b8d1b28a24928bcf5baff585728c3ec0c135616.png.map  inheritance-0f4f4f4fb58460e65464971fd95afabbf330afef.png.map  inheritance-1081c3abdb67185746dc484acc9db2baff401ea7.png.map  inheritance-11fb4e577ede7bc1494019e63e80624cef00a017.png.map  inheritance-128e8bb0c5eaf60396f1bbaa90f1cccad603abb2.png.map  inheritance-15ecfd6ff5b895e735b6fac9c3846c2f30ed4542.png.map  inheritance-1803f9390277e49c61ab69a3eefffb1d1d805257.png.map  inheritance-1a53d8f5ee04ea603447938bf944248614d56821.png.map  inheritance-1b4e98a7bc6546ed5323dc066205d8697b26c28a.png.map  inheritance-1c97bc0b2c9be0e5f7049ea6d04100586fb537df.png.map  inheritance-1d26298d8146922be34747c36d912b2a33402c87.png.map  inheritance-1da63d5470ce448d891f1a1ff22362635972562e.png.map  inheritance-1e90bffa7eb401b929fdc6886eaaf5a56ad18164.png.map  inheritance-1fb129f98c2041f0b0543352202cb5f72e5f27a3.png.map  inheritance-21d54b93c070021149a174cdaa39d800b77b3018.png.map  inheritance-22ced0a2fe69816b52d25f7bc36f3283e7c0b76e.png.map  inheritance-23463bdb8f2ad751de7458e2c8d6d50573740139.png.map  inheritance-23ec0313d58e9702fbab3bfa50dee991d97a702f.png.map  inheritance-24320499b64d12af876bdfb63b097a21fa75b8dc.png.map  inheritance-2635dee3f7f13f7a7fc959dee9b2925e89fcc44b.png.map  inheritance-268146972f06b0374cedf310b03be922a3a635f8.png.map  inheritance-26e2036fe93933a7f95e7da6ed06662d492cec1c.png.map  inheritance-276d8ae9dd461fb98c164e982cb02e9f65becd7b.png.map  inheritance-27bc50de81fa0443a9554717b4bb9c3cf367b53a.png.map  inheritance-288fb8bf8d258f9ca48cf81d90d08528a8472f23.png.map  inheritance-2aa5c932c361761c78e31d528cef90c9121b5b9e.png.map  inheritance-2e070ee4d46e5aa3b1dc5f7cc3e01f2b590786dd.png.map  inheritance-2f07ac7f8911e92673fb75579376181918081510.png.map  inheritance-2fe83bebf7d49d847b8285044e8c27dd360ae8a1.png.map  inheritance-327b07dafceea86b5a71102172cc0f9d53184ea0.png.map  inheritance-33ba04431ff0d31ca1dea82e3e149afd3e3d2e03.png.map  (+139 more)
docs/_implementation/: astrowisp.background.html  astrowisp.fake_image.bipolynomial_psf_piece.html  astrowisp.fake_image.html  astrowisp.fake_image.image.html  astrowisp.fake_image.piecewise_bicubic_psf.html  astrowisp.fake_image.piecewise_psf.html  astrowisp.fake_image.psf_piece.html  astrowisp.fit_star_shape.html  astrowisp.hat_masks.html  astrowisp.html  astrowisp.io_tree.html  astrowisp.libastrowisp.html  astrowisp.piecewise_bicubic_psf.html  astrowisp.piecewise_bicubic_psf_map.html  astrowisp.psf_base.html  astrowisp.subpixphot.html  astrowisp.tests.fitpsf.html  astrowisp.tests.fitpsf.noiseless_tests.html  astrowisp.tests.fitpsf.utils.html  astrowisp.tests.html  (+33 more)
doxygen/: Doxyfile  PSFIntegralsImplementation.md  hdf5output_files.md
fitsh-0.9.4-minimum/: Makefile  Makefile.in  config.status  configure  meson.build
fitsh-0.9.4-minimum/src/: Makefile.in  meson.build
src/: build.gradle
(+2525 files in other folders)
