#Control file for cibuildwheel (generate PIP wheels using github actions)

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
authors = [
    {
        name = 'Kaloyan Penev',
        email = 'Kaloyan.Penev@utdallas.edu'
    },
    {
        name = 'Angel Romero',
        email = 'Angel.Romero@utdallas.edu'
    },
    {
        name = 'Ashkan Jafarzadeh',
        email = 'ashkan.jafarzadeh@utdallas.edu'
    },
    {
        name = 'Istvan Domsa',
        email = 'istvan.domsa@gmail.com'
    },
    {
        name = 'Zoltan Csubry',
        email = 'zcsubry@astro.princeton.edu'
    }
]

maintainers = [
    {
        name = 'Kaloyan Penev',
        email = 'Kaloyan.Penev@utdallas.edu'
    },
    {
        name = 'Angel Romero',
        email = 'Angel.Romero@utdallas.edu'
    },
    {
        name = 'Ashkan Jafarzadeh',
        email = 'ashkan.jafarzadeh@utdallas.edu'
    }
]

license = {file = 'LICENSE.txt'},

classifiers = {
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: C++',
    'Programming Language :: C',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics'
}

dependencies = [
    'numpy',
    'scipy'
]

description = 'Tools for extracting photometry from wide-field night sky images'

readme = 'README.rst'

requires-python = '>=3.7'

[project.urls]
source = 'https://github.com/kpenev/SuperPhot'
documentation = 'https://kpenev.github.io/SuperPhot/'

[project.optional-dependencies]
test = [
    'asteval',
    'unittest'
]

visualize = [
    'configargparse',
    'matplotlib',
    'xalglib'
]

#Remove these to build full set of wheels.
[tool.cibuildwheel.macos]
build = ['cp37-macosx_x86_64']

[tool.cibuildwheel.windows]
build = ['cp37-win_amd64']

[tool.cibuildwheel.linux]
build = ['cp38-manylinux_x86_64']

#May need to add:
#skip = ['cp36-*']

[tool.meson-python.args]
compile = ['-vvv']

#Nothing to install from Eigen so avoid triggering unnecessary wheel repair,
#which is not implemented for windows).
install = ['--skip-subprojects=eigen']
