#Control file for cibuildwheel (generate PIP wheels using github actions)

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'astrowisp'

authors = [
    { name = 'Kaloyan Penev', email = 'Kaloyan.Penev@utdallas.edu' },
    { name = 'Angel Romero', email = 'Angel.Romero@utdallas.edu' },
    { name = 'Ashkan Jafarzadeh', email = 'ashkan.jafarzadeh@utdallas.edu' },
    { name = 'Istvan Domsa', email = 'istvan.domsa@gmail.com' }
]

maintainers = [
    { name = 'Kaloyan Penev', email = 'Kaloyan.Penev@utdallas.edu' },
    { name = 'Angel Romero', email = 'Angel.Romero@utdallas.edu' },
    { name = 'Ashkan Jafarzadeh', email = 'ashkan.jafarzadeh@utdallas.edu' }
]

license = { file = 'LICENSE' }

classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: C++',
    'Programming Language :: C',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics'
]

dependencies = [
    'numpy',
    'scipy'
]

description = 'Tools for extracting photometry from wide-field night sky images'

readme = 'README.rst'

requires-python = '>=3.7'

dynamic = ['version']

[project.urls]
source = 'https://github.com/kpenev/AstroWISP'
documentation = 'https://kpenev.github.io/AstroWISP/'

[project.optional-dependencies]
test = ['asteval']

visualize = [
    'configargparse',
    'matplotlib',
    'xalglib'
]

#Remove these to build full set of wheels.
#[tool.cibuildwheel.macos]
#build = ['cp37-macosx_x86_64']
#
#[tool.cibuildwheel.windows]
#build = ['cp37-win_amd64']
#
#[tool.cibuildwheel.linux]
#build = ['cp38-manylinux_x86_64']

[tool.cibuildwheel]
skip = ['*-musllinux_*']

test-requires = ['asteval']

#Asteval requires python >= 3.8 and scipy wheels only available on some archs
test-skip = 'cp37-* pp* *-win32 *_i686 *_ppc64le *_s390x'

test-command = [
    'python3 -m astrowisp.tests.test_fake_image',
    'python3 -m astrowisp.tests.test_piecewise_bicubic_psf',
    'python3 -m astrowisp.tests.test_background',
    'python3 -m astrowisp.tests.test_fit_star_shape.noiseless_tests',
]

[tool.meson-python.args]
compile = ['-vvv']

#Nothing to install from Eigen so avoid triggering unnecessary wheel repair,
#which is not implemented for windows).
install = ['--skip-subprojects=eigen']
