py_src = [
    'background.py',
    'fit_star_shape.py',
    'hat_masks.py',
    '_initialize_library.py',
    '__init__.py', 
    'piecewise_bicubic_psf_map.py',
    'piecewise_bicubic_psf.py',
    'psf_base.py',
    'subpixphot.py',
    'superphot_io_tree.py'
]

py.install_sources(
    py_src,
    subdir: 'superphot'
)

subdir('utils')
subdir('fake_image')
